# ProyectoVisionBeta

./: build.gradle  settings.gradle
OpenCV/: build.gradle
app/: build.gradle
app/src/androidTest/java/ups/vision/proyectovision/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mlp_mnist_model.yml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  second-native-lib.cpp
app/src/main/java/ups/vision/proyectovision/: CamaraActivity.java  MainActivity.java  SecondActivity.java
app/src/main/res/layout/: activity_camara.xml  activity_main.xml  activity_second.xml
app/src/main/res/values/: attrs.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ups/vision/proyectovision/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
